openshift-templates-springboot/config-server/deployment-config-config-server.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations: {}
  labels:
    app: config-server
    app.kubernetes.io/component: config-server
    app.kubernetes.io/instance: config-server
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: store
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-el7
  name: config-server
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: config-server
    deploymentconfig: config-server
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: config-server
        deploymentconfig: config-server
    spec:
      containers:
        - image: ' '
          imagePullPolicy: Always
          name: config-server
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - config-server
        from:
          kind: ImageStreamTag
          name: config-server:latest
      type: ImageChange
    - type: ConfigChange
