openshift-templates-springboot/config-server/service-config-server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: config-server
    app.kubernetes.io/component: config-server
    app.kubernetes.io/instance: config-server
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: store
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-el7
  name: config-server
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
  selector:
    app: config-server
    deploymentconfig: config-server
  sessionAffinity: None
  type: ClusterIP
